add poetry recordings

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,15 +4,27 @@
         <h3 class="text-center h5">Alexis Bulik <small>Blog</small></h3>
     </div>
     <div class="cell">
+
         <nav>
-            <ul>
-                Articles :
-                <li><a href="{{root}}les-confidences-oubliees/rise-and-shine.html">Rise & Shine, la danse et son langage</a></li>
-                <li><a href="{{root}}les-confidences-oubliees/livres/janvier-2019.html">Encore des livres, janvier 2019</a></li>
-                <li><a href="{{root}}les-confidences-oubliees/la-fiction-va-plus-loin-que-le-reel.html">La ficttion va plus loin que le réel</a></li>
-                <li><a href="{{root}}les-confidences-oubliees/livres/annee-2018.html">20 Livres qui m'ont fait grandir en 2018</a></li>
-                <li><a href="{{root}}les-confidences-oubliees/forgeron.html">C'est en forgeant que l'on devient forgeron</a></li>
-                <li><a href="{{root}}les-confidences-oubliees/robots.html">Les nouveaux outils</a></li>
+            <ul class="dropdown menu align-center" data-dropdown-menu>
+                <li>
+                    <div class="menu-text">Articles</div>
+                    <ul>
+                        <li><a href="{{root}}les-confidences-oubliees/rise-and-shine.html">Rise & Shine, la danse et son langage</a></li>
+                        <li><a href="{{root}}les-confidences-oubliees/la-fiction-va-plus-loin-que-le-reel.html">La ficttion va plus loin que le réel</a></li>
+                        <li><a href="{{root}}les-confidences-oubliees/forgeron.html">C'est en forgeant que l'on devient forgeron</a></li>
+                        <li><a href="{{root}}les-confidences-oubliees/robots.html">Les nouveaux outils</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="menu-text">Lectures</div>
+                    <ul>
+                        <li><a href="{{root}}les-confidences-oubliees/livres/fevrier-2019.html">Encore des livres, février 2019</a></li>
+                        <li><a href="{{root}}les-confidences-oubliees/livres/janvier-2019.html">Encore des livres, janvier 2019</a></li>
+                        <li><a href="{{root}}les-confidences-oubliees/livres/annee-2018.html">20 Livres qui m'ont fait grandir en 2018</a></li>
+                    </ul>
+                </li>
+                <li><a href="{{root}}les-confidences-oubliees/audio/poesies.html">Réciter des poésies</a></li>
             </ul>
         </nav>
     </div>
