--- a/src/partials/meta.html
+++ b/src/partials/meta.html
@@ -7,8 +7,7 @@
 <meta property="og:url" content="www.alexisbulik.fr/{{root}}{{page}}.html">
 <meta property="og:description" content="{{description}}">
 <meta property="og:title" content="{{title}}">
-<!-- <meta property="og:image" content="{{root}}assets/img/index.jpg"> -->
-<!-- <meta property="og:image" content="{{image}}" /> -->
+<meta property="og:image" content="{{root}}{{image}}" />
 
 <!-- twitter meta data -->
 <meta name="twitter:card" content="summary_large_image">
