--- a/src/partials/signature.html
+++ b/src/partials/signature.html
@@ -1,12 +1,14 @@
 <div class="callout">
+  <div class="grid-x">
     <!-- Facebook -->
-    <div class="fb-like" data-href="https://www.facebook.com/Les-Confidences-Oubli&#xe9;es-254116542179841" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+    <!-- <div class="fb-like" data-href="https://www.facebook.com/Les-Confidences-Oubli&#xe9;es-254116542179841" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div> -->
     <!-- Twitter -->
-    <a class="twitter-follow-button" href="https://twitter.com/AlexisBulik">Follow @AlexisBulik</a>
+    <div class="cell"><a class="twitter-follow-button" href="https://twitter.com/AlexisBulik">Follow @AlexisBulik</a></div>
     <!-- Github -->
-    <a href="https://github.com/alexis-bulik/likstrat"><i class="fi-social-github"></i>Github page</a>
+    <div class="cell"><a href="https://github.com/alexis-bulik/likstrat"><i class="fi-social-github"></i>Github page</a></div>
 
-    <a href="#" class="social-icon-button twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a>
+    <!-- <a href="#" class="social-icon-button twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a>
 
-    <a href="#" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
+    <a href="#" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a> -->
+  </div>
 </div>
