add louis menard poems, auguste de villiers, and goabl le desert des couleurs. add social links in page signature

--- a/src/partials/signature.html
+++ b/src/partials/signature.html
@@ -1,14 +1,39 @@
 <div class="callout">
-  <div class="grid-x">
-    <!-- Facebook -->
-    <!-- <div class="fb-like" data-href="https://www.facebook.com/Les-Confidences-Oubli&#xe9;es-254116542179841" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div> -->
-    <!-- Twitter -->
-    <div class="cell"><a class="twitter-follow-button" href="https://twitter.com/AlexisBulik">Follow @AlexisBulik</a></div>
-    <!-- Github -->
-    <div class="cell"><a href="https://github.com/alexis-bulik/likstrat"><i class="fi-social-github"></i>Github page</a></div>
-
-    <!-- <a href="#" class="social-icon-button twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a>
-
-    <a href="#" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a> -->
+  <div class="grid-x grid-padding-x align-center">
+    <div class="cell auto">
+      <a target="_blank" class="button" href="https://twitter.com/AlexisBulik" data-tooltip class="top" tabindex="2" title="Twitter">
+        <i class="fab fa-twitter"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="https://www.pinterest.fr/alexisbulik/" data-tooltip class="top" tabindex="2" title="Pinterest">
+        <i class="fab fa-pinterest-p"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="https://www.instagram.com/alexisbulik/" data-tooltip class="top" tabindex="2" title="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="https://www.youtube.com/channel/UCuWghXJ4O34GiUx73SOlPlg" data-tooltip class="top" tabindex="2" title="Youtube">
+        <i class="fab fa-youtube"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="https://github.com/alexis-bulik/likstrat" data-tooltip class="top" tabindex="2" title="Github">
+        <i class="fab fa-github-alt"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="mailto:alexisbulik@gmail.com" data-tooltip class="top" tabindex="2" title="E-mail">
+        <i class="far fa-envelope"></i>
+      </a>
+    </div>
+    <div class="cell auto">
+      <a target="_blank" class="button" href="http://m.me/254116542179841" data-tooltip class="top" tabindex="2" title="Messenger">
+        <i class="fab fa-facebook-messenger"></i>
+      </a>
+    </div>
   </div>
 </div>
