--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -3,10 +3,12 @@
 <!doctype html>
 <html class="no-js" lang="fr">
   	<head>
-		{{> meta}}
-		<title>Alexis Bulik - {{title}}</title>
-		<link rel="stylesheet" href="{{root}}assets/css/app.css">
-		<link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
+        {{> google-analytics}}
+    		{{> meta}}
+    		<title>Alexis Bulik - {{title}}</title>
+    		<link rel="stylesheet" href="{{root}}assets/css/app.css">
+    		<link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   	</head>
 <body>
   {{>facebook-jssdk}}
