--- a/src/partials/facebook-jssdk.html
+++ b/src/partials/facebook-jssdk.html
@@ -1,3 +1,15 @@
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId            : '377244522872965',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v3.2'
+    });
+  };
+</script>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
+
 <div id="fb-root"></div>
 <script>
     (function(d, s, id) {
@@ -7,4 +19,13 @@
         js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=747298688962733&autoLogAppEvents=1';
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+</script>
+<script>
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/messenger.Extensions.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'Messenger'));
 </script>
