change email adresse for messaging in signature

--- a/src/partials/signature.html
+++ b/src/partials/signature.html
@@ -26,7 +26,7 @@
       </a>
     </div>
     <div class="cell auto">
-      <a target="_blank" class="button" href="mailto:alexisbulik@gmail.com" data-tooltip class="top" tabindex="2" title="E-mail">
+      <a target="_blank" class="button" href="mailto:email@alexisbulik.fr" data-tooltip class="top" tabindex="2" title="E-mail">
         <i class="far fa-envelope"></i>
       </a>
     </div>
